Diseño de login y avanzo con pantalla de registro

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "module": "preserve",
     "paths": {
       "@app/*": ["src/app/*"],
+      "@auth/*": ["src/app/auth/*"],
       "@pages/*": ["src/app/pages/*"],
       "@shared/*": ["src/app/shared/*"],
       "@env/*": ["src/environments/*"],
