--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,10 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "port": 5500,
+            "buildTarget": "Void:build"
+          },
           "configurations": {
             "production": {
               "buildTarget": "Void:build:production"
