Nuevas pantallas, inicio con home y seguridad

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@app/*": ["src/app/*"],
       "@auth/*": ["src/app/auth/*"],
+      "@layout/*": ["src/app/layout/*"],
       "@pages/*": ["src/app/pages/*"],
       "@shared/*": ["src/app/shared/*"],
       "@env/*": ["src/environments/*"],
