--- a/angular.json
+++ b/angular.json
@@ -17,17 +17,19 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist",
+            "index": "src/index.html",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "allowedCommonJsDependencies": ["@osumi/tools"],
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
-            "allowedCommonJsDependencies": ["@osumi/tools"]
+            "styles": ["src/styles.scss"]
           },
           "configurations": {
             "production": {
@@ -96,6 +98,7 @@
     }
   },
   "cli": {
-    "schematicCollections": ["angular-eslint"]
+    "schematicCollections": ["angular-eslint"],
+    "analytics": false
   }
 }
